k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harvestiq-backend
  namespace: default
  labels:
    app: harvestiq-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: harvestiq-backend
  template:
    metadata:
      labels:
        app: harvestiq-backend
    spec:
      containers:
        - name: backend
          image: venkata1236/harvestiq-backend:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: model-storage
              mountPath: /app/saved_models
            - name: chroma-storage
              mountPath: /app/chroma_db
      volumes:
        - name: model-storage
          persistentVolumeClaim:
            claimName: model-pvc
        - name: chroma-storage
          persistentVolumeClaim:
            claimName: chroma-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: harvestiq-backend
  namespace: default
spec:
  selector:
    app: harvestiq-backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
